--- a/kalina/ak47/index.html
+++ b/kalina/ak47/index.html
@@ -52,7 +52,7 @@
         }
 
         .logo {
-            height: 24px;
+            height: 40px;
             filter: invert(1);
         }
 
@@ -82,20 +82,63 @@
             gap: 0;
         }
 
-        .hero-image {
+        .hero-gallery {
             position: relative;
+            display: flex;
+            flex-direction: column;
+            background: linear-gradient(135deg, #1a1a1a 0%, #0d0d0d 100%);
+            padding: 4rem;
+            padding-top: 6rem;
+        }
+
+        .main-image {
+            flex: 1;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #1a1a1a 0%, #0d0d0d 100%);
-            padding: 4rem;
         }
 
-        .hero-image img {
+        .main-image img {
             max-width: 100%;
-            max-height: 85vh;
+            max-height: 70vh;
             object-fit: contain;
             filter: drop-shadow(0 40px 80px rgba(0,0,0,0.5));
+            cursor: pointer;
+            transition: transform 0.3s ease;
+        }
+
+        .main-image img:hover {
+            transform: scale(1.02);
+        }
+
+        .thumbnails {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+            padding-top: 2rem;
+        }
+
+        .thumbnail {
+            width: 80px;
+            height: 80px;
+            border: 2px solid transparent;
+            cursor: pointer;
+            opacity: 0.5;
+            transition: all 0.3s;
+            overflow: hidden;
+            background: var(--charcoal);
+        }
+
+        .thumbnail:hover,
+        .thumbnail.active {
+            opacity: 1;
+            border-color: var(--white);
+        }
+
+        .thumbnail img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
         .hero-content {
@@ -329,19 +372,106 @@
 
         /* Footer */
         footer {
-            padding: 4rem;
+            padding: 5rem 4rem 3rem;
             background: var(--dark);
-            text-align: center;
             border-top: 1px solid var(--charcoal);
         }
 
-        footer .logo {
-            margin-bottom: 2rem;
+        .footer-content {
+            max-width: 1400px;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 4rem;
+            margin-bottom: 4rem;
         }
 
-        footer p {
+        .footer-brand .logo {
+            height: 50px;
+            margin-bottom: 1.5rem;
+        }
+
+        .footer-brand p {
+            font-size: 0.9rem;
+            color: var(--gray);
+            line-height: 1.7;
+            max-width: 280px;
+        }
+
+        .footer-links h3 {
+            font-size: 0.75rem;
+            letter-spacing: 0.15em;
+            text-transform: uppercase;
+            color: var(--white);
+            margin-bottom: 1.5rem;
+        }
+
+        .footer-links ul {
+            list-style: none;
+        }
+
+        .footer-links li {
+            margin-bottom: 0.75rem;
+        }
+
+        .footer-links a {
+            color: var(--gray);
+            text-decoration: none;
+            font-size: 0.9rem;
+            transition: color 0.3s;
+        }
+
+        .footer-links a:hover {
+            color: var(--white);
+        }
+
+        .footer-contact p {
+            color: var(--gray);
+            font-size: 0.9rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .footer-contact a {
+            color: var(--light-gray);
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        .footer-contact a:hover {
+            color: var(--white);
+        }
+
+        .footer-bottom {
+            padding-top: 2rem;
+            border-top: 1px solid var(--charcoal);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 1400px;
+            margin: 0 auto;
+        }
+
+        .footer-bottom p {
             font-size: 0.8rem;
             color: var(--gray);
+        }
+
+        .social-links {
+            display: flex;
+            gap: 1.5rem;
+        }
+
+        .social-links a {
+            color: var(--gray);
+            text-decoration: none;
+            font-size: 0.8rem;
+            letter-spacing: 0.05em;
+            text-transform: uppercase;
+            transition: color 0.3s;
+        }
+
+        .social-links a:hover {
+            color: var(--white);
         }
 
         /* Responsive */
@@ -350,7 +480,7 @@
                 grid-template-columns: 1fr;
             }
 
-            .hero-image {
+            .hero-gallery {
                 min-height: 70vh;
             }
 
@@ -364,6 +494,10 @@
 
             header {
                 padding: 1rem 1.5rem;
+            }
+
+            .logo {
+                height: 30px;
             }
 
             nav {
@@ -389,6 +523,26 @@
 
             .unboxing-content {
                 padding: 4rem 2rem;
+            }
+
+            .footer-content {
+                grid-template-columns: 1fr;
+                gap: 3rem;
+            }
+
+            .footer-bottom {
+                flex-direction: column;
+                gap: 1.5rem;
+                text-align: center;
+            }
+
+            .thumbnails {
+                gap: 0.5rem;
+            }
+
+            .thumbnail {
+                width: 60px;
+                height: 60px;
             }
         }
 
@@ -427,8 +581,24 @@
     </header>
 
     <section class="hero">
-        <div class="hero-image">
-            <img src="product-ak47-hero.png" alt="KALINA AK-47 Bag - Hand-sculpted leather handbag">
+        <div class="hero-gallery">
+            <div class="main-image">
+                <img src="product-ak47-hero.png" alt="KALINA AK-47 Bag - Hand-sculpted leather handbag" id="mainImage">
+            </div>
+            <div class="thumbnails">
+                <div class="thumbnail active" onclick="changeImage('product-ak47-hero.png', this)">
+                    <img src="product-ak47-hero.png" alt="Front view">
+                </div>
+                <div class="thumbnail" onclick="changeImage('product-angle.png', this)">
+                    <img src="product-angle.png" alt="Angle view">
+                </div>
+                <div class="thumbnail" onclick="changeImage('product-detail.png', this)">
+                    <img src="product-detail.png" alt="Detail view">
+                </div>
+                <div class="thumbnail" onclick="changeImage('packaging.png', this)">
+                    <img src="packaging.png" alt="Packaging">
+                </div>
+            </div>
         </div>
         <div class="hero-content">
             <span class="product-tag">Signature Collection</span>
@@ -438,11 +608,11 @@
                 transforming an icon of conflict into an object of uncompromising beauty.
             </p>
             <div class="price-block">
-                <span class="price">$2,800</span>
+                <span class="price">$1,270</span>
                 <p class="price-note">Complimentary worldwide shipping</p>
             </div>
             <div>
-                <a href="https://www.kalinabrand.com" class="cta-button">Inquire Now</a>
+                <a href="https://www.kalinabrand.com" class="cta-button">Add to Bag</a>
                 <a href="#details" class="secondary-link">View Details ↓</a>
             </div>
         </div>
@@ -509,13 +679,52 @@
 
     <section class="final-cta">
         <h2>Own the Original</h2>
-        <span class="price">$2,800</span>
-        <a href="https://www.kalinabrand.com" class="cta-button">Inquire Now</a>
+        <span class="price">$1,270</span>
+        <a href="https://www.kalinabrand.com" class="cta-button">Add to Bag</a>
     </section>
 
     <footer>
-        <img src="logo-transparent.png" alt="KALINA" class="logo">
-        <p>© 2026 KALINA. All rights reserved.</p>
+        <div class="footer-content">
+            <div class="footer-brand">
+                <img src="logo-transparent.png" alt="KALINA" class="logo">
+                <p>
+                    Provocative luxury. Hand-sculpted leather goods that challenge convention 
+                    and celebrate the artistry of rebellion.
+                </p>
+            </div>
+            <div class="footer-links">
+                <h3>Shop</h3>
+                <ul>
+                    <li><a href="https://www.kalinabrand.com">All Products</a></li>
+                    <li><a href="#">Signature Collection</a></li>
+                    <li><a href="#">Limited Editions</a></li>
+                    <li><a href="#">Collaborations</a></li>
+                </ul>
+            </div>
+            <div class="footer-links footer-contact">
+                <h3>Contact</h3>
+                <p><a href="mailto:hello@kalinabrand.com">hello@kalinabrand.com</a></p>
+                <p style="margin-top: 1.5rem; color: var(--gray);">
+                    Los Angeles, CA<br>
+                    By appointment only
+                </p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2026 KALINA. All rights reserved.</p>
+            <div class="social-links">
+                <a href="#">Instagram</a>
+                <a href="#">Twitter</a>
+            </div>
+        </div>
     </footer>
+
+    <script>
+        function changeImage(src, element) {
+            document.getElementById('mainImage').src = src;
+            document.querySelectorAll('.thumbnail').forEach(t => t.classList.remove('active'));
+            element.classList.add('active');
+        }
+    </script>
 </body>
 </html>
