--- a/wingman-v8/index.html
+++ b/wingman-v8/index.html
@@ -60,6 +60,39 @@ body::before {
   background-size: 60px 60px; opacity: 0.7;
 }
 
+/* Colored grid squares — sprinkled accents */
+.grid-squares {
+  position: fixed; inset: 0; pointer-events: none; z-index: 0;
+  overflow: hidden;
+}
+.grid-square {
+  position: absolute;
+  width: 59px; height: 59px;
+  opacity: 0;
+  animation: squareFadeIn 2s ease forwards;
+}
+.grid-square.sq-blue { background: var(--accent-blue); opacity: 0.035; }
+.grid-square.sq-green { background: var(--accent-green); opacity: 0.03; }
+.grid-square.sq-blue-strong { background: var(--accent-blue); opacity: 0.06; }
+.grid-square.sq-green-strong { background: var(--accent-green); opacity: 0.05; }
+@keyframes squareFadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+/* Stagger the square animations */
+.grid-square:nth-child(1) { animation-delay: 0.5s; }
+.grid-square:nth-child(2) { animation-delay: 1.2s; }
+.grid-square:nth-child(3) { animation-delay: 0.8s; }
+.grid-square:nth-child(4) { animation-delay: 1.5s; }
+.grid-square:nth-child(5) { animation-delay: 2s; }
+.grid-square:nth-child(6) { animation-delay: 1s; }
+.grid-square:nth-child(7) { animation-delay: 1.8s; }
+.grid-square:nth-child(8) { animation-delay: 2.2s; }
+.grid-square:nth-child(9) { animation-delay: 0.6s; }
+.grid-square:nth-child(10) { animation-delay: 1.4s; }
+.grid-square:nth-child(11) { animation-delay: 2.5s; }
+.grid-square:nth-child(12) { animation-delay: 0.9s; }
+
 .content-wrap { position: relative; z-index: 1; }
 
 /* ═══════════════════════════════════════════════════
@@ -321,6 +354,105 @@ nav > * { pointer-events: auto; }
 .corner-mark.cm-green::before, .corner-mark.cm-green::after { background: var(--accent-green); }
 .cm-tl { top: 20px; left: 20px; } .cm-tr { top: 20px; right: 20px; }
 .cm-bl { bottom: 20px; left: 20px; } .cm-br { bottom: 20px; right: 20px; }
+
+/* ═══════════════════════════════════════════════════
+   DECORATIVE ELEMENTS — Deliberate Details
+   ═══════════════════════════════════════════════════ */
+
+/* Floating measurement marks */
+.measure-mark {
+  position: absolute;
+  pointer-events: none;
+  opacity: 0.15;
+}
+.measure-mark-h {
+  width: 80px; height: 1px;
+  display: flex; align-items: center; gap: 4px;
+}
+.measure-mark-h::before,
+.measure-mark-h::after {
+  content: ''; width: 1px; height: 6px;
+}
+.measure-mark-h .measure-line { flex: 1; height: 1px; }
+.measure-mark-h.mm-blue::before,
+.measure-mark-h.mm-blue::after,
+.measure-mark-h.mm-blue .measure-line { background: var(--accent-blue); }
+.measure-mark-h.mm-green::before,
+.measure-mark-h.mm-green::after,
+.measure-mark-h.mm-green .measure-line { background: var(--accent-green); }
+
+/* Rotating ring decorations (like hero) */
+.deco-ring {
+  position: absolute;
+  pointer-events: none;
+}
+.deco-ring svg {
+  width: 100%; height: 100%;
+}
+.deco-ring .ring-stroke {
+  fill: none;
+  stroke-width: 0.5;
+  transform-origin: center;
+}
+.deco-ring .ring-blue { stroke: var(--accent-blue); opacity: 0.12; animation: ringRotate 50s linear infinite; }
+.deco-ring .ring-green { stroke: var(--accent-green); opacity: 0.1; animation: ringRotate 40s linear infinite reverse; }
+.deco-ring .ring-dot { opacity: 0.4; }
+
+/* Animated dashed lines (horizontal) */
+.deco-hline {
+  position: absolute;
+  height: 1px;
+  overflow: hidden;
+  pointer-events: none;
+}
+.deco-hline-inner {
+  width: 200%;
+  height: 1px;
+  animation: hlineScroll 12s linear infinite;
+}
+.deco-hline.dh-blue .deco-hline-inner {
+  background: repeating-linear-gradient(90deg, var(--accent-blue) 0 4px, transparent 4px 10px);
+  opacity: 0.15;
+}
+.deco-hline.dh-green .deco-hline-inner {
+  background: repeating-linear-gradient(90deg, var(--accent-green) 0 3px, transparent 3px 8px);
+  opacity: 0.12;
+}
+@keyframes hlineScroll { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
+
+/* Small cross marks */
+.deco-cross {
+  position: absolute;
+  width: 12px; height: 12px;
+  pointer-events: none;
+  opacity: 0.2;
+}
+.deco-cross::before,
+.deco-cross::after {
+  content: '';
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+}
+.deco-cross::before { width: 12px; height: 1px; }
+.deco-cross::after { width: 1px; height: 12px; }
+.deco-cross.dc-blue::before,
+.deco-cross.dc-blue::after { background: var(--accent-blue); }
+.deco-cross.dc-green::before,
+.deco-cross.dc-green::after { background: var(--accent-green); }
+
+/* Coordinate label */
+.deco-coord {
+  position: absolute;
+  font-family: 'IBM Plex Mono', monospace;
+  font-size: 8px;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  opacity: 0.15;
+  pointer-events: none;
+}
+.deco-coord.dc-blue { color: var(--accent-blue); }
+.deco-coord.dc-green { color: var(--accent-green); }
 
 /* ═══════════════════════════════════════════════════
    SERVICES TICKER
@@ -1286,6 +1418,22 @@ footer { border-top: 1px solid var(--grid-line-strong); padding: 48px 40px; }
 
 <div class="grid-bg"></div>
 
+<!-- Sprinkled colored grid squares -->
+<div class="grid-squares">
+  <div class="grid-square sq-blue" style="top: 120px; left: 180px;"></div>
+  <div class="grid-square sq-green" style="top: 300px; right: 240px;"></div>
+  <div class="grid-square sq-blue" style="top: 540px; left: 60px;"></div>
+  <div class="grid-square sq-green-strong" style="top: 780px; right: 120px;"></div>
+  <div class="grid-square sq-blue" style="top: 960px; left: 300px;"></div>
+  <div class="grid-square sq-green" style="top: 1200px; right: 60px;"></div>
+  <div class="grid-square sq-blue-strong" style="top: 1440px; left: 120px;"></div>
+  <div class="grid-square sq-green" style="top: 1680px; right: 300px;"></div>
+  <div class="grid-square sq-blue" style="top: 1920px; left: 240px;"></div>
+  <div class="grid-square sq-green" style="top: 2160px; right: 180px;"></div>
+  <div class="grid-square sq-blue" style="top: 2400px; left: 60px;"></div>
+  <div class="grid-square sq-green-strong" style="top: 2640px; right: 240px;"></div>
+</div>
+
 <div class="scroll-ruler">
     <div class="ruler-track"></div>
     <div class="ruler-progress" id="rulerProgress"></div>
@@ -1509,6 +1657,20 @@ footer { border-top: 1px solid var(--grid-line-strong); padding: 48px 40px; }
 
   <!-- CAPABILITIES -->
   <section id="capabilities">
+    <!-- Decorative elements -->
+    <div class="deco-ring" style="position: absolute; top: 60px; right: 8%; width: 120px; height: 120px; opacity: 0.6;">
+      <svg viewBox="0 0 100 100">
+        <circle class="ring-stroke ring-blue" cx="50" cy="50" r="45"/>
+        <circle class="ring-stroke ring-green" cx="50" cy="50" r="38"/>
+        <circle class="ring-dot" cx="50" cy="5" r="2" fill="var(--accent-blue)"/>
+      </svg>
+    </div>
+    <div class="deco-cross dc-blue" style="top: 140px; left: 5%;"></div>
+    <div class="deco-cross dc-green" style="bottom: 200px; right: 12%;"></div>
+    <div class="deco-hline dh-blue" style="top: 50%; left: 0; width: 80px;">
+      <div class="deco-hline-inner"></div>
+    </div>
+    <div class="deco-coord dc-blue" style="top: 40px; left: 40px;">x: 001</div>
     <div class="section-frame">
       <div class="section-header accent-blue section-header-line">
         <span class="section-label">Capabilities</span>
@@ -1591,6 +1753,12 @@ footer { border-top: 1px solid var(--grid-line-strong); padding: 48px 40px; }
 
   <!-- PROJECTS -->
   <section id="work">
+    <!-- Decorative elements -->
+    <div class="deco-cross dc-green" style="top: 80px; left: 4%;"></div>
+    <div class="deco-hline dh-green" style="top: 40%; left: 0; width: 50px;">
+      <div class="deco-hline-inner"></div>
+    </div>
+    <div class="deco-coord dc-green" style="top: 40px; right: 40px;">z: 002</div>
     <div class="section-frame">
       <div class="section-header accent-green section-header-line">
         <span class="section-label">Selected Work</span>
@@ -1608,6 +1776,19 @@ footer { border-top: 1px solid var(--grid-line-strong); padding: 48px 40px; }
 
   <!-- LOCATION -->
   <section class="location-section">
+    <!-- Decorative elements -->
+    <div class="deco-ring" style="position: absolute; bottom: 80px; left: 6%; width: 100px; height: 100px; opacity: 0.5;">
+      <svg viewBox="0 0 100 100">
+        <circle class="ring-stroke ring-green" cx="50" cy="50" r="42"/>
+        <circle class="ring-stroke ring-blue" cx="50" cy="50" r="32"/>
+        <circle class="ring-dot" cx="50" cy="8" r="2" fill="var(--accent-green)"/>
+      </svg>
+    </div>
+    <div class="deco-cross dc-green" style="top: 100px; right: 8%;"></div>
+    <div class="deco-hline dh-green" style="bottom: 30%; right: 0; width: 60px;">
+      <div class="deco-hline-inner"></div>
+    </div>
+    <div class="deco-coord dc-green" style="bottom: 40px; right: 40px;">y: 003</div>
     <div class="section-frame">
       <div class="section-header accent-gradient section-header-line">
         <span class="section-label">Los Angeles</span>
